lib/bindings/generated/easytier.g.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import, unused_element, deprecated_member_use_from_same_package
@ffi.DefaultAsset('package:yukari/bindings/generated/easytier.g.dart')
library;

import 'dart:ffi' as ffi;

/// Invoke a JSON-RPC method on a running instance and return the response.
///
/// service_name, method_name, and domain_name must be non-NULL NUL-terminated
/// UTF-8 strings alive for the duration of the call; payload_json is the
/// request body as UTF-8 JSON, or NULL when the method takes no payload.
/// out_response_json must be non-NULL: on success it receives a newly
/// allocated NUL-terminated UTF-8 JSON response that the caller must release
/// with free_string. Returns 0 on success; on failure (non-zero), the output
/// pointer is untouched and get_error_msg (same thread) gives the detail.
@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
  )
>()
external int call_json_rpc(
  ffi.Pointer<ffi.Char> service_name,
  ffi.Pointer<ffi.Char> method_name,
  ffi.Pointer<ffi.Char> domain_name,
  ffi.Pointer<ffi.Char> payload_json,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_response_json,
);

/// Collect peer/network information of running instances as name/JSON pairs.
///
/// infos must point to a caller-allocated array of at least max_length
/// KeyValuePair elements; the entries are filled with pointers owned by the
/// native library and valid until the next list-style call. Returns the number
/// of pairs written (clamped to max_length) on success; on failure (negative),
/// call get_error_msg on the same thread.
@ffi.Native<ffi.Int Function(ffi.Pointer<KeyValuePair>, ffi.Size)>()
external int collect_network_infos(
  ffi.Pointer<KeyValuePair> infos,
  int max_length,
);

/// Drain up to capacity completion descriptors into the caller's array.
///
/// completions must point to at least capacity writable DataPlaneCompletion
/// elements alive for the duration of the call. Draining a descriptor makes
/// its typed result available but does not consume it. Returns the number of
/// descriptors written (non-negative), or a negative DataPlaneErrorKind value
/// on failure.
@ffi.Native<
  ffi.Int Function(ffi.Uint64, ffi.Pointer<DataPlaneCompletion>, ffi.Uint32)
>()
external int data_plane_completion_drain(
  int session,
  ffi.Pointer<DataPlaneCompletion> completions,
  int capacity,
);

/// Block until one completion is ready or the wait times out.
///
/// timeout_ms bounds the wait; UINT64_MAX waits without deadline. Returns 1
/// when a completion is ready, 0 on timeout or when the session was closed,
/// and a negative DataPlaneErrorKind value on failure.
@ffi.Native<ffi.Int Function(ffi.Uint64, ffi.Uint64)>()
external int data_plane_completion_wait(int session, int timeout_ms);

/// Request cancellation of a submitted but not yet completed operation.
///
/// operation must be a live operation id of the same session. A cancelled
/// operation still produces a completion descriptor carrying its terminal
/// status. Returns 0 on success or a negative DataPlaneErrorKind value.
@ffi.Native<ffi.Int Function(ffi.Uint64, ffi.Uint64)>()
external int data_plane_operation_cancel(int session, int operation);

/// Release the state of a finished operation whose result is abandoned.
///
/// Call this instead of a *_result_take when a drained result is
/// intentionally discarded. operation must be a live operation id of the same
/// session. Returns 0 on success or a negative DataPlaneErrorKind value.
@ffi.Native<ffi.Int Function(ffi.Uint64, ffi.Uint64)>()
external int data_plane_operation_free(int session, int operation);

/// Close a TCP stream, TCP listener, or UDP socket resource.
///
/// Cancels operations referencing the resource. resource must be a live
/// handle of the same session. Returns 0 on success or a negative
/// DataPlaneErrorKind value.
@ffi.Native<ffi.Int Function(ffi.Uint64, ffi.Uint64)>()
external int data_plane_resource_close(int session, int resource);

/// Replace the persistent deadline of one direction on a stream or socket.
///
/// resource must be a live TCP stream, TCP listener, or UDP socket handle of
/// the same session. direction selects sides by bit: 1 reads, 2 writes, 3
/// both (see DATA_PLANE_DEADLINE_READ / DATA_PLANE_DEADLINE_WRITE).
/// timeout_ms is the new limit from now on; UINT64_MAX clears the deadline.
/// The change applies immediately, including to active operations, and an
/// expired deadline stays expired until replaced or cleared. Returns 0 on
/// success or a negative DataPlaneErrorKind value.
@ffi.Native<ffi.Int Function(ffi.Uint64, ffi.Uint64, ffi.Uint32, ffi.Uint64)>()
external int data_plane_resource_deadline_set(
  int session,
  int resource,
  int direction,
  int timeout_ms,
);

/// Query the payload size of a completed TCP-read or UDP-receive operation.
///
/// operation must be a live, drained read/receive operation id of the same
/// session. out_size must be non-NULL and receives the byte count on success.
/// Use it to size the buffer for the matching result_take call. Returns 0 on
/// success or a negative DataPlaneErrorKind value.
@ffi.Native<ffi.Int Function(ffi.Uint64, ffi.Uint64, ffi.Pointer<ffi.Uint32>)>()
external int data_plane_result_size(
  int session,
  int operation,
  ffi.Pointer<ffi.Uint32> out_size,
);

/// Close a data-plane session, cancelling and discarding its outstanding
/// operations and resources, and waking any thread blocked in
/// data_plane_completion_wait for this session.
///
/// session must be a live handle from data_plane_session_open. Returns 0 on
/// success or a negative DataPlaneErrorKind value.
@ffi.Native<ffi.Int Function(ffi.Uint64)>()
external int data_plane_session_close(int session);

/// Open a data-plane session bound to one running EasyTier instance.
///
/// inst_name must be a non-NULL NUL-terminated UTF-8 instance name alive for
/// the duration of the call. out_session must be non-NULL and receives the
/// new session handle on success. At most one native session may be open per
/// instance. Returns 0 on success or a negative DataPlaneErrorKind value.
@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Uint64>)>()
external int data_plane_session_open(
  ffi.Pointer<ffi.Char> inst_name,
  ffi.Pointer<ffi.Uint64> out_session,
);

/// Consume the result of a completed TCP accept operation exactly once.
///
/// out_stream receives the new stream handle for the accepted connection;
/// out_local_addr and out_peer_addr, when non-NULL, receive the connection's
/// addresses. If the operation's status was not success, the result is
/// consumed and a negative DataPlaneErrorKind value is returned. Returns 0 on
/// success or a negative DataPlaneErrorKind value.
@ffi.Native<
  ffi.Int Function(
    ffi.Uint64,
    ffi.Uint64,
    ffi.Pointer<ffi.Uint64>,
    ffi.Pointer<DataPlaneSocketAddr>,
    ffi.Pointer<DataPlaneSocketAddr>,
  )
>()
external int data_plane_tcp_accept_result_take(
  int session,
  int operation,
  ffi.Pointer<ffi.Uint64> out_stream,
  ffi.Pointer<DataPlaneSocketAddr> out_local_addr,
  ffi.Pointer<DataPlaneSocketAddr> out_peer_addr,
);

/// Submit an accept operation on a TCP listener obtained earlier.
///
/// listener must be a live stream-handle resource from a bind result of the
/// same session. timeout_ms bounds the accept from the moment submission is
/// accepted; UINT64_MAX means no deadline. out_operation must be non-NULL and
/// receives the new operation id on success. Completes as operation kind 3;
/// take the result with data_plane_tcp_accept_result_take. Returns 0 on
/// success or a negative DataPlaneErrorKind value.
@ffi.Native<
  ffi.Int Function(ffi.Uint64, ffi.Uint64, ffi.Uint64, ffi.Pointer<ffi.Uint64>)
>()
external int data_plane_tcp_accept_submit(
  int session,
  int listener,
  int timeout_ms,
  ffi.Pointer<ffi.Uint64> out_operation,
);

/// Consume the result of a completed TCP bind operation exactly once.
///
/// out_listener receives the new listener handle; out_local_addr, when
/// non-NULL, receives the bound address. If the operation's status was not
/// success, the result is consumed and a negative DataPlaneErrorKind value is
/// returned. Returns 0 on success or a negative DataPlaneErrorKind value.
@ffi.Native<
  ffi.Int Function(
    ffi.Uint64,
    ffi.Uint64,
    ffi.Pointer<ffi.Uint64>,
    ffi.Pointer<DataPlaneSocketAddr>,
  )
>()
external int data_plane_tcp_bind_result_take(
  int session,
  int operation,
  ffi.Pointer<ffi.Uint64> out_listener,
  ffi.Pointer<DataPlaneSocketAddr> out_local_addr,
);

/// Submit a TCP listener bind on a local port within the session.
///
/// timeout_ms bounds the bind from the moment submission is accepted;
/// UINT64_MAX means no deadline. out_operation must be non-NULL and receives
/// the new operation id on success. Completes as operation kind 2; take the
/// result with data_plane_tcp_bind_result_take. Returns 0 on success or a
/// negative DataPlaneErrorKind value.
@ffi.Native<
  ffi.Int Function(ffi.Uint64, ffi.Uint16, ffi.Uint64, ffi.Pointer<ffi.Uint64>)
>()
external int data_plane_tcp_bind_submit(
  int session,
  int local_port,
  int timeout_ms,
  ffi.Pointer<ffi.Uint64> out_operation,
);

/// Consume the result of a completed TCP connect operation exactly once.
///
/// out_stream receives the new stream handle; out_local_addr and
/// out_peer_addr, when non-NULL, receive the negotiated addresses. If the
/// operation's status was not success, the result is consumed and a negative
/// DataPlaneErrorKind value is returned. operation must belong to the same
/// session. Returns 0 on success or a negative DataPlaneErrorKind value.
@ffi.Native<
  ffi.Int Function(
    ffi.Uint64,
    ffi.Uint64,
    ffi.Pointer<ffi.Uint64>,
    ffi.Pointer<DataPlaneSocketAddr>,
    ffi.Pointer<DataPlaneSocketAddr>,
  )
>()
external int data_plane_tcp_connect_result_take(
  int session,
  int operation,
  ffi.Pointer<ffi.Uint64> out_stream,
  ffi.Pointer<DataPlaneSocketAddr> out_local_addr,
  ffi.Pointer<DataPlaneSocketAddr> out_peer_addr,
);

/// Submit a TCP connect to a peer address through the session's instance.
///
/// peer_addr is copied before the call returns. timeout_ms bounds the
/// operation from the moment submission is accepted; UINT64_MAX means no
/// deadline. out_operation must be non-NULL and receives the new operation id
/// on success. Completes as operation kind 1; on success take the result with
/// data_plane_tcp_connect_result_take. Returns 0 on success or a negative
/// DataPlaneErrorKind value.
@ffi.Native<
  ffi.Int Function(
    ffi.Uint64,
    DataPlaneSocketAddr,
    ffi.Uint64,
    ffi.Pointer<ffi.Uint64>,
  )
>()
external int data_plane_tcp_connect_submit(
  int session,
  DataPlaneSocketAddr peer_addr,
  int timeout_ms,
  ffi.Pointer<ffi.Uint64> out_operation,
);

/// Consume the result of a completed TCP read operation exactly once.
///
/// data must point to at least capacity writable bytes alive for the
/// duration of the call; capacity should cover data_plane_result_size.
/// out_len receives the number of bytes copied and out_eof, when non-NULL,
/// the end-of-stream flag. When capacity is too small, returns
/// -BufferTooSmall and leaves the result available for a later call. Returns
/// 0 on success or a negative DataPlaneErrorKind value.
@ffi.Native<
  ffi.Int Function(
    ffi.Uint64,
    ffi.Uint64,
    ffi.Pointer<ffi.Uint8>,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint32>,
    ffi.Pointer<ffi.Bool>,
  )
>()
external int data_plane_tcp_read_result_take(
  int session,
  int operation,
  ffi.Pointer<ffi.Uint8> data,
  int capacity,
  ffi.Pointer<ffi.Uint32> out_len,
  ffi.Pointer<ffi.Bool> out_eof,
);
